tests/ui/endpoint/unsafe.stderr
error: Endpoint handler methods must not be unsafe
 --> tests/ui/endpoint/unsafe.rs:9:1
  |
9 | unsafe fn read_all() {}
  | ^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/unsafe.rs:4:10
  |
4 | #[derive(Resource)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Resource` (in Nightly builds, run with -Z macro-backtrace for more info)
