tests/ui/endpoint/unsafe.rs
#[macro_use]
extern crate gotham_restful;

#[derive(Resource)]
#[resource(read_all)]
struct FooResource;

#[read_all]
unsafe fn read_all() {}

fn main() {}
